[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.34",
    "numpy>=2.3.3",
    "openai>=2.0.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "unstructured[all-docs]>=0.18.15",
]
